# adhed

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2bfe98426d58_initial_schema.py  c2_hash_api_keys.py  e11e4eab41d7_add_fragments_table.py  f3a1_add_fragment_subtype_source_url.py  g4b2_add_fragment_links.py  h5c3_add_sessions_and_triage_context.py
docs/: api-reference.md  architecture.md  deployment.md  fragments.md  getting-started.md  integration-guide.md  rules-engine.md  state-machine.md
docs/examples/: starter-rules.json
docs/superpowers/plans/: 2026-04-24-fragment-links.md
docs/superpowers/specs/: 2026-04-24-fragment-links-design.md
integrations/dev-dashboard/: README.md  adhed
integrations/nanoclaw/: README.md
integrations/nanoclaw/life/: SKILL.md  life-cli.py
src/taskstore/: config.py  database.py  logging_config.py  main.py
src/taskstore/api/: audit.py  comments.py  deps.py  errors.py  fragment_links.py  fragments.py  health.py  issues.py  labels.py  middleware.py  notifications.py  projects.py  rules.py  sessions.py  setup.py  states.py  summary.py  (+2 more)
tests/: conftest.py  test_api_key_hashing.py  test_api_key_rotation.py  test_audit.py  test_audit_coverage.py  test_audit_retention.py  test_batch.py  test_comments.py  test_config.py  test_convert.py  test_cross_tenant.py  test_custom_fields_cap.py  test_email_normalization.py  test_error_envelope.py  test_fragment_link_sessions.py  test_fragment_links.py  test_fragments.py  test_health.py  test_issues.py  test_labels.py  test_notifications.py  test_projects.py  test_role_change.py  test_roles.py  test_rules_actions.py  test_rules_conditions.py  test_rules_integration.py  test_security_middleware.py  test_sessions.py  test_setup.py  test_summary.py  test_team_creation_auth.py  test_teams.py  test_template_render.py  test_transitions.py  test_triage_context.py  test_users.py
(+51 files in other folders)
